--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "compile": "hardhat compile",
     "test": "hardhat test",
     "test:coverage": "hardhat coverage",
-    "deploy:base-sepolia": "hardhat run scripts/deploy.js --network base-sepolia",
-    "verify": "hardhat verify --network base-sepolia",
+    "deploy:base-sepolia": "hardhat run scripts/deploy.js --network baseSepolia",
+    "verify": "hardhat verify --network baseSepolia",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{js,ts,sol}\""
   },
